--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="screen.css">
-  </head>
-  <body>
-    <h1>Home</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
-    <script src="index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ally Gilbreath – UX Profile</title>
+  <link rel="stylesheet" href="style.css" />
+
+</head>
+<body>
+  <div class="profile-card">
+    <img src="allygilbreath.jpg" alt="Ally Gilbreath" class="profile-pic" />
+
+    <h1>Ally Gilbreath</h1>
+
+    <p class="info">
+      <img src="home.svg"  class="icon" /> East Lansing
+    </p>
+    <p class="info">
+      <img src="mail.svg"  class="icon" /> gilbrea6@msu.edu
+    </p>
+
+    <div class="section">
+      <h2>About Me</h2>
+      <p>I am a UX Design Student based in East Lansing, Michigan. I attend Michigan State University.</p>
+    </div>
+
+    <div class="section icons">
+      <p><img src="user.svg"  class="icon" /> Skills</p>
+      <p><img src="tool (1).svg" class="icon" /> Tools</p>
+      <p><img src="edit-2.svg" class="icon" /> Focus</p>
+    </div>
+
+    <div class="buttons">
+      <a href="#" class="btn">LinkedIn</a>
+      <a href="#" class="btn">Portfolio</a>
+      <a href="#" class="btn">Github</a>
+    </div>
+  </div>
+</body>
 </html>
